<!--
  ~ Copyright (c) 2024. Created by Alexsander Fernandes at 2/28. All rights reserved.
  ~ GitHub: https://github.com/alexsanderfer/
  ~ Portfolio: https://alexsanderfer.netlify.app/
  -->

<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="editText_email">E-mail</string>
    <string name="editText_password">Senha</string>
    <string name="dont_have_account">Não tem conta?</string>
    <string name="register">Cadastre-se!</string>
    <string name="login">Login</string>
    <string name="type_your_email">Digite seu e-mail</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="type_your_name">Digite seu nome</string>
    <string name="fill_name_field">Por favor, preencha o campo nome.</string>
    <string name="fill_email_field">Por favor, preencha o campo do e-mail.</string>
    <string name="fill_password_field">Por favor, preencha o campo da senha.</string>
    <string name="user_successfully_registered">Usuário cadastrado com sucesso!</string>
    <string name="forgot_password">Esqueceu a sua senha?</string>
    <string name="fail_to_register">Falha ao cadastrar usuário, tente novamente.</string>
    <string name="invalid_email">E-mail inválido.</string>
    <string name="email_already_in_use">E-mail já cadastrado</string>
    <string name="weak_password">O password é fraco demais para ser usado, tente outro.</string>
    <string name="error_register">Erro ao fazer o seu cadastro.</string>
    <string name="password_field_empty">O campo de senha não pode ser vazio.</string>
    <string name="email_field_empty">O campo de e-mail não pode ser vazio</string>
    <string name="login_successfully_with_user_email">Login efetuado com sucesso usando a conta: %1$s</string>
    <string name="profile">Perfil</string>
    <string name="logout">Sair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Atualizar</string>
    <string name="no_image_selected">Nenhuma imagem foi selecionada.</string>
    <string name="give_camera_permission">Dê a permissão para abrir a câmera.</string>
    <string name="error_upload_image">Falha ao fazer o upload da imagem. Erro: %1$s.</string>
    <string name="success_upload_image_profile">Sucesso ao fazer o upload da imagem.</string>
    <string name="success_updating_profile">Sucesso ao atualizar o perfil.</string>
    <string name="error_updating_profile">Erro ao atualizar o perfil.</string>
    <string name="profile_photo">Foto do perfil</string>
    <string name="name">Nome</string>
    <string name="input_message">Mensagem</string>
    <string name="message_placeholder">Mensagem</string>
    <string name="error_sending_message">Erro ao enviar a mensagem.</string>
    <string name="error_get_messages">Erro ao recuperar as mensagens.</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. "</string>
    <string name="erro_saving_chat">Erro ao salvar a conversa.</string>
    <string name="error_retrieving_conversations">Erro ao recuperar as conversas.</string>
    <string name="john_doe">John Doe</string>
    <string name="last_message">Última mensagem</string>
    <string name="photo_profile">Photo profile</string>

</resources>