<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2024. Created by Alexsander Fernandes at 2/28. All rights reserved.
  ~ GitHub: https://github.com/alexsanderfer/
  ~ Portfolio: https://alexsanderfer.netlify.app/
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutItemChat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearanceOverlay="@style/ShapeProfilePlaceholder"
        android:scaleType="centerCrop"
        android:id="@+id/imageChatProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/photo_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/profile_placeholder" />

    <TextView
        android:id="@+id/textChatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/john_doe"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageChatProfile"
        app:layout_constraintTop_toTopOf="@+id/imageChatProfile" />

    <TextView
        android:id="@+id/textLastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_message"
        app:layout_constraintBottom_toBottomOf="@+id/imageChatProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageChatProfile"
        app:layout_constraintTop_toBottomOf="@+id/textChatName" />
</androidx.constraintlayout.widget.ConstraintLayout>